--- a/archives/toutiao-search/2023-10-06.md
+++ b/archives/toutiao-search/2023-10-06.md
@@ -1,59 +1,72 @@
 # 2023-10-06
 
-共 209 条
+共 221 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 06 2023 14:00:53 GMT+0800 (China Standard Time) -->
-1. [中国女篮绝杀日本蝉联亚运冠军](https://so.toutiao.com/search?keyword=中国女篮绝杀日本蝉联亚运冠军)
+<!-- 最后更新时间 Fri Oct 06 2023 15:00:40 GMT+0800 (China Standard Time) -->
 1. [上海4岁女童海滩走失已超36小时](https://so.toutiao.com/search?keyword=上海4岁女童海滩走失已超36小时)
+1. [中国女篮绝杀日本蝉联亚运冠军](https://so.toutiao.com/search?keyword=中国女篮绝杀日本蝉联亚运冠军)
 1. [大国工程激发经济增长新动能](https://so.toutiao.com/search?keyword=大国工程激发经济增长新动能)
-1. [女篮王思雨绝杀日本队](https://so.toutiao.com/search?keyword=女篮王思雨绝杀日本队)
-1. [两干部流出不雅视频被停职](https://so.toutiao.com/search?keyword=两干部流出不雅视频被停职)
-1. [叙利亚军事学院恐袭遇难者升至80人](https://so.toutiao.com/search?keyword=叙利亚军事学院恐袭遇难者升至80人)
-1. [周润发回应裸捐56亿港币](https://so.toutiao.com/search?keyword=周润发回应裸捐56亿港币)
-1. [国庆假期返程提示](https://so.toutiao.com/search?keyword=国庆假期返程提示)
-1. [王仕鹏为不当言论道歉](https://so.toutiao.com/search?keyword=王仕鹏为不当言论道歉)
 1. [袁琦琦说男生没肌肉要反思](https://so.toutiao.com/search?keyword=袁琦琦说男生没肌肉要反思)
-1. [金世佳被娃求抱承认是自己儿子](https://so.toutiao.com/search?keyword=金世佳被娃求抱承认是自己儿子)
+1. [李强将出席杭州亚运会闭幕式](https://so.toutiao.com/search?keyword=李强将出席杭州亚运会闭幕式)
+1. [林雨薇荣归故里请全村人吃饭](https://so.toutiao.com/search?keyword=林雨薇荣归故里请全村人吃饭)
+1. [周润发回应裸捐56亿港币](https://so.toutiao.com/search?keyword=周润发回应裸捐56亿港币)
+1. [新闻联播首位90后女主播亮相](https://so.toutiao.com/search?keyword=新闻联播首位90后女主播亮相)
+1. [婚礼场地被村民连夜搬空](https://so.toutiao.com/search?keyword=婚礼场地被村民连夜搬空)
+1. [全红婵坐经济舱回京 书包挂满乌龟](https://so.toutiao.com/search?keyword=全红婵坐经济舱回京+书包挂满乌龟)
+1. [两干部流出不雅视频被停职](https://so.toutiao.com/search?keyword=两干部流出不雅视频被停职)
 1. [仰头玩手机可以预防颈椎病？不实](https://so.toutiao.com/search?keyword=仰头玩手机可以预防颈椎病？不实)
 1. [官方通报幼儿园园长与无业男子开房](https://so.toutiao.com/search?keyword=官方通报幼儿园园长与无业男子开房)
-1. [林雨薇荣归故里请全村人吃饭](https://so.toutiao.com/search?keyword=林雨薇荣归故里请全村人吃饭)
-1. [直击假期返程高峰](https://so.toutiao.com/search?keyword=直击假期返程高峰)
-1. [新闻联播首位90后女主播亮相](https://so.toutiao.com/search?keyword=新闻联播首位90后女主播亮相)
-1. [李强将出席杭州亚运会闭幕式](https://so.toutiao.com/search?keyword=李强将出席杭州亚运会闭幕式)
+1. [金世佳被娃求抱承认是自己儿子](https://so.toutiao.com/search?keyword=金世佳被娃求抱承认是自己儿子)
+1. [4车相撞1人身亡 全责车记录仪坏了](https://so.toutiao.com/search?keyword=4车相撞1人身亡+全责车记录仪坏了)
+1. [3个女儿国庆在家全是单身 爸爸愁坏](https://so.toutiao.com/search?keyword=3个女儿国庆在家全是单身+爸爸愁坏)
+1. [为何中国女篮关键时刻可以不掉链子](https://so.toutiao.com/search?keyword=为何中国女篮关键时刻可以不掉链子)
+1. [女生回家一身长裙帮父母收玉米](https://so.toutiao.com/search?keyword=女生回家一身长裙帮父母收玉米)
+1. [陈飞宇首次回应弄丢妖猫传的猫](https://so.toutiao.com/search?keyword=陈飞宇首次回应弄丢妖猫传的猫)
+1. [王仕鹏为不当言论道歉](https://so.toutiao.com/search?keyword=王仕鹏为不当言论道歉)
+1. [女子公交车上唱歌向乘客索要费用](https://so.toutiao.com/search?keyword=女子公交车上唱歌向乘客索要费用)
 1. [媒体：美国政坛乱成一锅粥了](https://so.toutiao.com/search?keyword=媒体：美国政坛乱成一锅粥了)
-1. [普京：西方是时候“停止傲慢”了](https://so.toutiao.com/search?keyword=普京：西方是时候“停止傲慢”了)
+1. [我国科学家发现战略性金属新矿物](https://so.toutiao.com/search?keyword=我国科学家发现战略性金属新矿物)
+1. [男子买羊腿送领导 打开却是大棒骨](https://so.toutiao.com/search?keyword=男子买羊腿送领导+打开却是大棒骨)
+1. [直击假期返程高峰](https://so.toutiao.com/search?keyword=直击假期返程高峰)
+1. [两间房均有摄像头 顾客酒店齐报警](https://so.toutiao.com/search?keyword=两间房均有摄像头+顾客酒店齐报警)
+1. [派出所回应婚礼场地被连夜搬空](https://so.toutiao.com/search?keyword=派出所回应婚礼场地被连夜搬空)
+1. [专家评乌总统夫人百万美元买珠宝](https://so.toutiao.com/search?keyword=专家评乌总统夫人百万美元买珠宝)
+1. [李在明出席涉贪腐渎职案首次公审](https://so.toutiao.com/search?keyword=李在明出席涉贪腐渎职案首次公审)
 1. [亚运团长霍启刚的一天](https://so.toutiao.com/search?keyword=亚运团长霍启刚的一天)
-1. [婚礼场地被村民连夜搬空](https://so.toutiao.com/search?keyword=婚礼场地被村民连夜搬空)
+1. [四川女篮奖励三巨头每人一套房](https://so.toutiao.com/search?keyword=四川女篮奖励三巨头每人一套房)
+1. [孩子参加父母的婚礼成主角](https://so.toutiao.com/search?keyword=孩子参加父母的婚礼成主角)
+1. [颁奖后李梦蹦蹦跳跳地把花送给家人](https://so.toutiao.com/search?keyword=颁奖后李梦蹦蹦跳跳地把花送给家人)
+1. [西安对彩虹星球公司正式立案调查](https://so.toutiao.com/search?keyword=西安对彩虹星球公司正式立案调查)
+1. [男子不慎砸头躲奶奶怀里哭](https://so.toutiao.com/search?keyword=男子不慎砸头躲奶奶怀里哭)
+1. [周润发自曝患糖尿病](https://so.toutiao.com/search?keyword=周润发自曝患糖尿病)
+1. [“凡晨组合”晋级羽毛球女双决赛](https://so.toutiao.com/search?keyword=“凡晨组合”晋级羽毛球女双决赛)
+1. [夫妻回深圳打工女儿哭喊追车](https://so.toutiao.com/search?keyword=夫妻回深圳打工女儿哭喊追车)
+1. [返程聪明人](https://so.toutiao.com/search?keyword=返程聪明人)
+1. [于和伟：别带偏了 黎志田还是坏人](https://so.toutiao.com/search?keyword=于和伟：别带偏了+黎志田还是坏人)
+1. [特斯拉部分车型在美降价](https://so.toutiao.com/search?keyword=特斯拉部分车型在美降价)
+1. [特朗普称认可吉姆·乔丹出任众议长](https://so.toutiao.com/search?keyword=特朗普称认可吉姆·乔丹出任众议长)
+1. [还没从于和伟的“嘘”里走出来](https://so.toutiao.com/search?keyword=还没从于和伟的“嘘”里走出来)
+1. [李凯尔谈代表中国男篮出战的经历](https://so.toutiao.com/search?keyword=李凯尔谈代表中国男篮出战的经历)
+1. [普京：我曾提议俄加入北约但遭拒绝](https://so.toutiao.com/search?keyword=普京：我曾提议俄加入北约但遭拒绝)
+1. [曾在国庆大阅兵担任领队的将军履新](https://so.toutiao.com/search?keyword=曾在国庆大阅兵担任领队的将军履新)
+1. [女子回应酒店发现摄像头：考虑起诉](https://so.toutiao.com/search?keyword=女子回应酒店发现摄像头：考虑起诉)
+1. [双节“反向旅游”成新潮流](https://so.toutiao.com/search?keyword=双节“反向旅游”成新潮流)
+1. [南京一充气城堡坍塌多名孩子被埋](https://so.toutiao.com/search?keyword=南京一充气城堡坍塌多名孩子被埋)
+1. [乔布斯逝世12周年 库克缅怀](https://so.toutiao.com/search?keyword=乔布斯逝世12周年+库克缅怀)
+1. [女篮王思雨绝杀日本队](https://so.toutiao.com/search?keyword=女篮王思雨绝杀日本队)
+1. [叙利亚军事学院恐袭遇难者升至80人](https://so.toutiao.com/search?keyword=叙利亚军事学院恐袭遇难者升至80人)
+1. [国庆假期返程提示](https://so.toutiao.com/search?keyword=国庆假期返程提示)
+1. [普京：西方是时候“停止傲慢”了](https://so.toutiao.com/search?keyword=普京：西方是时候“停止傲慢”了)
 1. [假期返程有人400公里开11个小时](https://so.toutiao.com/search?keyword=假期返程有人400公里开11个小时)
 1. [甘肃局地或有大暴雪返程须注意](https://so.toutiao.com/search?keyword=甘肃局地或有大暴雪返程须注意)
-1. [陈飞宇首次回应弄丢妖猫传的猫](https://so.toutiao.com/search?keyword=陈飞宇首次回应弄丢妖猫传的猫)
 1. [假期返程警惕疲劳驾驶系好安全带](https://so.toutiao.com/search?keyword=假期返程警惕疲劳驾驶系好安全带)
 1. [美军在叙利亚击落一架土耳其无人机](https://so.toutiao.com/search?keyword=美军在叙利亚击落一架土耳其无人机)
 1. [普京：俄罗斯反对乌克兰加入北约](https://so.toutiao.com/search?keyword=普京：俄罗斯反对乌克兰加入北约)
-1. [3个女儿国庆在家全是单身 爸爸愁坏](https://so.toutiao.com/search?keyword=3个女儿国庆在家全是单身+爸爸愁坏)
-1. [全红婵坐经济舱回京 书包挂满乌龟](https://so.toutiao.com/search?keyword=全红婵坐经济舱回京+书包挂满乌龟)
-1. [周润发自曝患糖尿病](https://so.toutiao.com/search?keyword=周润发自曝患糖尿病)
-1. [四川女篮奖励三巨头每人一套房](https://so.toutiao.com/search?keyword=四川女篮奖励三巨头每人一套房)
 1. [迷笛音乐节为何成了音乐“劫”](https://so.toutiao.com/search?keyword=迷笛音乐节为何成了音乐“劫”)
-1. [女子公交车上唱歌向乘客索要费用](https://so.toutiao.com/search?keyword=女子公交车上唱歌向乘客索要费用)
-1. [夫妻回深圳打工女儿哭喊追车](https://so.toutiao.com/search?keyword=夫妻回深圳打工女儿哭喊追车)
 1. [台风“小犬”破126年来阵风纪录](https://so.toutiao.com/search?keyword=台风“小犬”破126年来阵风纪录)
-1. [乔布斯逝世12周年 库克缅怀](https://so.toutiao.com/search?keyword=乔布斯逝世12周年+库克缅怀)
-1. [我国科学家发现战略性金属新矿物](https://so.toutiao.com/search?keyword=我国科学家发现战略性金属新矿物)
-1. [女生回家一身长裙帮父母收玉米](https://so.toutiao.com/search?keyword=女生回家一身长裙帮父母收玉米)
-1. [颁奖后李梦蹦蹦跳跳地把花送给家人](https://so.toutiao.com/search?keyword=颁奖后李梦蹦蹦跳跳地把花送给家人)
-1. [孩子参加父母的婚礼成主角](https://so.toutiao.com/search?keyword=孩子参加父母的婚礼成主角)
-1. [特斯拉部分车型在美降价](https://so.toutiao.com/search?keyword=特斯拉部分车型在美降价)
-1. [两间房均有摄像头 顾客酒店齐报警](https://so.toutiao.com/search?keyword=两间房均有摄像头+顾客酒店齐报警)
-1. [专家评乌总统夫人百万美元买珠宝](https://so.toutiao.com/search?keyword=专家评乌总统夫人百万美元买珠宝)
-1. [南京一充气城堡坍塌多名孩子被埋](https://so.toutiao.com/search?keyword=南京一充气城堡坍塌多名孩子被埋)
-1. [双节“反向旅游”成新潮流](https://so.toutiao.com/search?keyword=双节“反向旅游”成新潮流)
-1. [曾在国庆大阅兵担任领队的将军履新](https://so.toutiao.com/search?keyword=曾在国庆大阅兵担任领队的将军履新)
 1. [防范台风“小犬” 多线列车停运](https://so.toutiao.com/search?keyword=防范台风“小犬”+多线列车停运)
 1. [老人90岁生日27个重孙排长队磕头](https://so.toutiao.com/search?keyword=老人90岁生日27个重孙排长队磕头)
-1. [男子不慎砸头躲奶奶怀里哭](https://so.toutiao.com/search?keyword=男子不慎砸头躲奶奶怀里哭)
-1. [返程聪明人](https://so.toutiao.com/search?keyword=返程聪明人)
 1. [中国女篮从未缺席亚运领奖台](https://so.toutiao.com/search?keyword=中国女篮从未缺席亚运领奖台)
 1. [中国篮协祝贺女篮夺金](https://so.toutiao.com/search?keyword=中国篮协祝贺女篮夺金)
 1. [网友发布迷笛假消息被采取措施](https://so.toutiao.com/search?keyword=网友发布迷笛假消息被采取措施)
@@ -65,7 +78,6 @@
 1. [奥运冠军和亚运冠军结婚了](https://so.toutiao.com/search?keyword=奥运冠军和亚运冠军结婚了)
 1. [专家称节后国内金价跌幅或更大](https://so.toutiao.com/search?keyword=专家称节后国内金价跌幅或更大)
 1. [吴姝彤夺马拉松游泳女子10公里金牌](https://so.toutiao.com/search?keyword=吴姝彤夺马拉松游泳女子10公里金牌)
-1. [女子回应酒店发现摄像头：考虑起诉](https://so.toutiao.com/search?keyword=女子回应酒店发现摄像头：考虑起诉)
 1. [演员金世佳参加表弟婚礼并致辞](https://so.toutiao.com/search?keyword=演员金世佳参加表弟婚礼并致辞)
 1. [俄称在黑海西北部摧毁一艘乌军快艇](https://so.toutiao.com/search?keyword=俄称在黑海西北部摧毁一艘乌军快艇)
 1. [近距离感受雅万高铁高速动车组](https://so.toutiao.com/search?keyword=近距离感受雅万高铁高速动车组)
